--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -7,10 +7,11 @@
         android:layout_height="match_parent"
         android:background="#ffffff"
     >
-    <ImageView 
-        android:layout_width="match_parent" 
-        android:layout_height="match_parent" 
-        android:src="@drawable/splash" 
-        android:scaleType="center" 
+    <pl.droidsonroids.gif.GifImageView
+       android:layout_width="170dp"
+       android:layout_height="170dp"
+       android:src="@drawable/splash"
+       android:scaleType="centerInside" 
+       android:background="#ffffff"
     />
 </RelativeLayout>
